updates and bug fixes

--- a/src/stylus/base/global.styl
+++ b/src/stylus/base/global.styl
@@ -1,18 +1,76 @@
 html,
 body
 	background			$body-background
-	
+
+*
+	box-sizing			border-box
+
+.container
+	margin				0 auto
+	max-width			100%
+
+.hidden
+
+	&-small
+		display			none !important
+
+		+bp($screen-md-min)
+			display		block !important
+
+	&-medium
+		display			block !important
+
+		+bp($screen-md-min)
+			display		none !important
+
+		+bp($screen-lg-min)
+			display		block !important
+
+	&-large
+		display			block !important
+
+		+bp($screen-lg-min)
+			display		none !important
+
+.horizontal-centre
+	horizontal-centre()
+
 .margin
-	margin				$base-spacing-unit
 
 	&--bottom
-		margin(bottom)
+		margin-bottom	$base-spacing-unit
 
 	&--left
-		margin(left)
+		margin-left		$base-spacing-unit
 
 	&--right
-		margin(right)
+		margin-right	$base-spacing-unit
 
 	&--top
-		margin(top)
+		margin-top		$base-spacing-unit
+
+.vertical-centre
+	vertical-centre()
+
+.visible
+
+	&-small
+		display			block !important
+
+		+bp($screen-md-min)
+			display		none !important
+
+	&-medium
+		display			none !important
+
+		+bp($screen-md-min)
+			display		block !important
+
+		+bp($screen-lg-min)
+			display		none !important
+
+	&-large
+		display			none !important
+
+		+bp($screen-lg-min)
+			display		block !important
