--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,6 +1,7 @@
 // Base styles
 @import			"base/variables"
 @import			"base/mixins"
+@import			"base/normalise"
 @import			"base/typography"
 @import			"base/global"
 @import			"base/images"
@@ -10,7 +11,7 @@
 @import			"modules/*"
 
 // Page templates
-// @import 		"pages/*"
+// @import 		"templates/*"
 
 // For Shame - i.e. hacks that don't really fit anywhere
 @import 		"base/shame"
