--- a/src/stylus/base/mixins.styl
+++ b/src/stylus/base/mixins.styl
@@ -9,6 +9,16 @@ ActiveFocusHover()
 
 // Layout
 
+absolute()
+	position					absolute
+
+bp($bp, $min-max = "min-width")
+
+	$em = $bp / $base-font-size
+
+	@media ({$min-max}: unit($em, em))
+		{block}
+
 clear()
 	clear 						both
 
@@ -23,8 +33,27 @@ clearfix()
 	&:after
 		clear					both
 
-.group
-	clearfix()
+fixed()
+	position					fixed
+
+fl()
+	float						left
+
+fr()
+	float						right
+
+horizontal-centre()
+	position					relative
+	left						50%
+	transform					translateX(-50%)
+
+relative()
+	position					relative
+
+vertical-centre()
+	position					relative
+	top							50%
+	transform					translateY(-50%)
 
 // Typography
 
