--- a/src/stylus/base/typography.styl
+++ b/src/stylus/base/typography.styl
@@ -1,3 +1,25 @@
+$min-width =			400
+$max-width =			800
+$min-width-px =			unit($min-width, px)
+$max-width-px =			unit($max-width, px)
+$min-font =				16
+$max-font =				24
+$min-font-px =			unit($min-font, px)
+$max-font-px =			unit($max-font, px)
+
+:root
+	font-size   		unit($min-font, "px")
+
+@media (min-width: $min-width-px) and (max-width: $max-width-px)
+
+	:root
+		font-size		"calc(%s + (%s - %s) * ((100vw - %s) / (%s - %s)))" % (($min-font-px) ($max-font) ($min-font) ($min-width-px) ($max-width) ($min-width))
+
+@media (min-width: $max-width-px)
+
+	:root
+		font-size		unit($max-font, "px")
+
 // Base styles
 
 html,
@@ -5,7 +27,6 @@ body
 	color					$body-text-colour
 	font-family				$body-font
 	font-kerning			auto
-	font-size				14px
 	font-smooth				always
 	font-weight				400
 	letter-spacing			0.5px
@@ -14,10 +35,13 @@ body
 
 a
 	color					$blue
-	
+
 	+ActiveFocusHover()
 		color				darken($blue, 20%)
-		
+
+p
+	line-height				1.365
+
 h1,
 h2,
 h3,
@@ -34,6 +58,12 @@ h6
 
 .centred
 	text-align				center
+
+.left-aligned
+	text-align				left
+
+.right-aligned
+	text-align				right
 
 .small
 	font-size				0.85em
