--- a/src/stylus/base/grid.styl
+++ b/src/stylus/base/grid.styl
@@ -1,48 +1,74 @@
-/////////////////
-// Semantic.gs // for Stylus: http://learnboost.github.com/stylus/
-/////////////////
+/*
+Flex Grid Framework
+Original repository:
+https://github.com/afonsopacifer/flex-grid-framework
+Website:
+https://afonsopacifer.github.io/flex-grid-framework/
+Author:
+Afonso Pacifer (afonsopacifer.com.br)
+Licence:
+MIT - https://github.com/afonsopacifer/flex-grid-framework/blob/master/licence.md
+* /
 
-// Defaults which you can freely override
-column-width =			60px
-gutter-width =			20px
-columns =				12
+/* Configs
+------------------------------------------------*/
+max-width = 1200px
+margin = 0.52083%
+column = 7.29177%
 
-// Utility variable â€” you should never need to modify this
-_gridsystem-width =		(column-width + gutter-width) * columns
+/* Box Model
+------------------------------------------------*/
+*
+	box-sizing				border-box
 
-// Set @total-width to 100% for a fluid layout
-total-width =			_gridsystem-width
+/* Row
+------------------------------------------------*/
+row()
+	display					flex
+	flex-wrap				wrap
+	margin-left				auto
+	margin-right			auto
+	max-width				max-width
+	width					100%
 
-// Correcting percentage-to-pixel rounding errors in IE6 & 7
-// See http://tylertate.com/blog/2012/01/05/subpixel-rounding.html
-// Override @min with the minimum width of your layout
-min-width =				960
-correction =			(((0.5 / min-width) * 100) * 1%)
+/* Columns
+------------------------------------------------*/
+col(number-of-cols)
+	margin-left				margin
+	margin-right			margin
+	width					(number-of-cols * column) + (((number-of-cols - 1) * 2) * margin)
 
+/* Offset
+------------------------------------------------*/
+offset(number-of-offset)
+	margin-left				(number-of-offset * column) + (((number-of-offset - 1) * 2) * margin) + (3 * margin)
 
-//////////
-// GRID //
-//////////
+/* Flex Container
+------------------------------------------------*/
+content-align(content-value)
+	if (content-value == left)
+		justify-content		flex-start
 
-body
-	clearfix()
-	width				100%
+	if (content-value == right)
+		justify-content		flex-end
 
-row(columns = columns)
-	display				block
-	width				total-width * ((gutter-width + _gridsystem-width ) / _gridsystem-width)
-	margin				0 total-width * (((gutter-width * 0.5) / _gridsystem-width ) * - 1)
-	*width				total-width * ((gutter-width + _gridsystem-width ) / _gridsystem-width)-correction
-	*margin				0 total-width * (((gutter-width * 0.5) / _gridsystem-width ) * - 1)-correction
+	if (content-value == center)
+		justify-content		center
 
-column(x, columns = columns)
-	display				inline
-	float				left
-	overflow			hidden
-	width				total-width * ((((gutter-width + column-width ) * x) - gutter-width) / _gridsystem-width)
-	margin				0 total-width * ( (gutter-width * 0.5) / _gridsystem-width)
-	*width				total-width * ((((gutter-width + column-width ) * x) - gutter-width) / _gridsystem-width)-correction
-	*margin				0 total-width * ( (gutter-width * 0.5) / _gridsystem-width)-correction
+	if (content-value == between)
+		justify-content		space-between
 
-offset(offset = 1)
-	margin-left			total-width*(((gutter-width+column-width)*offset + (gutter-width*0.5))/_gridsystem-width)
+	if (content-value == around)
+		justify-content		space-around
+
+/* Flex Itens
+------------------------------------------------*/
+vertical-align(vertical-value)
+	if (vertical-value == top)
+		align-items			flex-start
+
+	if (vertical-value == middle)
+		align-items			center
+
+	if (vertical-value == bottom)
+		align-items			flex-end
