--- a/src/stylus/base/mixins.styl
+++ b/src/stylus/base/mixins.styl
@@ -1,4 +1,7 @@
-// Interaction
+//
+// INTERACTION
+// ================
+//
 
 ActiveFocusHover()
 	&.active
@@ -7,13 +10,61 @@ ActiveFocusHover()
 	&:hover
 		{block}
 
-// Layout
+// SINE
+$ease-in-sine      =			cubic-bezier(0.470,  0.000, 0.745, 0.715)
+$ease-out-sine     =			cubic-bezier(0.390,  0.575, 0.565, 1.000)
+$ease-in-out-sine  =			cubic-bezier(0.445,  0.050, 0.550, 0.950)
+
+// QUAD
+$ease-in-quad      =			cubic-bezier(0.550,  0.085, 0.680, 0.530)
+$ease-out-quad     =			cubic-bezier(0.250,  0.460, 0.450, 0.940)
+$ease-in-out-quad  =			cubic-bezier(0.455,  0.030, 0.515, 0.955)
+
+// CUBIC
+$ease-in-cubic     =			cubic-bezier(0.550,  0.055, 0.675, 0.190)
+$ease-out-cubic    =			cubic-bezier(0.215,  0.610, 0.355, 1.000)
+$ease-in-out-cubic =			cubic-bezier(0.645,  0.045, 0.355, 1.000)
+
+// QUART
+$ease-in-quart     =			cubic-bezier(0.895,  0.030, 0.685, 0.220)
+$ease-out-quart    =			cubic-bezier(0.165,  0.840, 0.440, 1.000)
+$ease-in-out-quart =			cubic-bezier(0.770,  0.000, 0.175, 1.000)
+
+// QUINT
+$ease-in-quint     =			cubic-bezier(0.755,  0.050, 0.855, 0.060)
+$ease-out-quint    =			cubic-bezier(0.230,  1.000, 0.320, 1.000)
+$ease-in-out-quint =			cubic-bezier(0.860,  0.000, 0.070, 1.000)
+
+// EXPO
+$ease-in-expo      =			cubic-bezier(0.950,  0.050, 0.795, 0.035)
+$ease-out-expo     =			cubic-bezier(0.190,  1.000, 0.220, 1.000)
+$ease-in-out-expo  =			cubic-bezier(1.000,  0.000, 0.000, 1.000)
+
+// CIRC
+$ease-in-circ      =			cubic-bezier(0.600,  0.040, 0.980, 0.335)
+$ease-out-circ     =			cubic-bezier(0.075,  0.820, 0.165, 1.000)
+$ease-in-out-circ  =			cubic-bezier(0.785,  0.135, 0.150, 0.860)
+
+// BACK
+$ease-in-back      =			cubic-bezier(0.600, -0.280, 0.735, 0.045)
+$ease-out-back     =			cubic-bezier(0.175,  0.885, 0.320, 1.275)
+$ease-in-out-back  =			cubic-bezier(0.680, -0.550, 0.265, 1.550)
+
+//
+// LAYOUT
+// ================
+//
+
+$no-mq ?=						false
+$width--fixed-min ?=			960px
+$width--fixed-max ?=			1200px
 
 clear()
 	clear 						both
 
 clearfix()
-	*zoom						1
+	+ie(7, true)
+		*zoom					1
 
 	&:before,
 	&:after
@@ -23,17 +74,215 @@ clearfix()
 	&:after
 		clear					both
 
-.group
-	clearfix()
+height-min($height)
+	+media("height", "min", $height)
+		{block}
 
-// Typography
+height-max($height)
+	+media("height", "max", $height)
+		{block}
+
+height-range($min-height, $max-height)
+	+media("height", "range", $min-height, $max-height)
+		{block}
+
+media($direction, $type, $a, $b = false)
+	if ($no-mq == true)
+		+no-media($direction, $type, $a, $b)
+			{block}
+
+	else
+		$mq = ""
+		if ($type == "min" || $type == "max")
+			$mq = "screen and (" + $type + "-" + $direction + ": " + $a + ")"
+		if ($type == "range")
+			$mq = "screen and (min-" + $direction + ": " + $a + ") and (max-" + $direction + ": " + $b + ")"
+
+		@media $mq
+			{block}
+      
+no-media($direction, $type, $a, $b)
+	if ($direction == "width")
+		if ($type == "min")
+			if ($width--fixed-min >= $a)
+				{block}
+		else if ($type == "max")
+			if ($width--fixed-max <= $a)
+				{block}
+		else if ($type == "range")
+			if ($width--fixed-min >= $a && $width--fixed-max <= $b)
+				{block}
+
+width-min($width)
+	+media("width", "min", $width)
+		{block}
+
+width-max($width)
+	+media("width", "max", $width)
+		{block}
+
+width-range($min-width, $max-width)
+	+media("width", "range", $min-width, $max-width)
+		{block}
+
+//
+// MEDIA
+// ================
+//
+
+hidpi($ratio = 1.3)
+
+	$mq =						"(-webkit-min-device-pixel-ratio: " + $ratio + "), "
+	$mq =						$mq + "(min-resolution: " + floor($ratio * 96) + "dpi)"
+
+	@media $mq
+		{block}
+
+//
+// TYPOGRAPHY
+// ================
+//
+
+convert-to-em($px, $base)
+	if ((unit($px) == '' || unit($px) == 'px') && ($px != 0))
+		return (round($px / $base, 3))em
+	else
+		return 0
+
+convert-to-rem($px, $base)
+	if $is-ie && $is-ie--version <= 8
+		($px)px
+	else if (typeof($px) == "unit")
+		if ((unit($px) == "" || unit($px) == "px") && ($px != 0))
+			return (round($px / $base, 3))rem
+		else
+			return 0
+
+ellipsis($nowrap = true)
+	text-overflow				ellipsis
+	overflow					hidden
+
+	if $nowrap
+		white-space				nowrap
+
+em($value, $base = $base--font-size)
+	$max = length($value)
+
+	$emValues = ()
+	for $i in (0...$max)
+		push($emValues, convert-to-em( $value[$i], $base ))
+
+	return $emValues
+
+font-face($font-name, $file-path, $weight = "normal", $style = "normal")
+
+	$url-fallback = "url('" + $file-path + ".eot')"
+	$url = "url('" + $file-path + ".eot?#iefix') format('embedded-opentype'), "
+	$url = $url + "url('" + $file-path + ".woff') format('woff'), "
+	$url = $url + "url('" + $file-path + ".ttf') format('truetype'), "
+	$url = $url + "url('" + $file-path + ".svg#svg" + $font-name + "') format('svg')"
+
+	@font-face
+		font-family				$font-name
+		font-style				unquote($style)
+		font-weight				unquote($weight)
+		src						unquote($url-fallback)
+		src						unquote($url)
+
+hide-text()
+	overflow					hidden
+	text-indent					110%
+	white-space					nowrap
 
 inline-list()
 	li
 		display					inline-block
 		margin-left				-4px
 
+rem($value, $base = $base--font-size)
+	$max = length($value)
+	$remValues = ()
+	for $i in (0...$max)
+		push($remValues, convert-to-rem( $value[$i], $base ))
+	return $remValues
+
+tracking($val, $base = false)
+	if $base
+		( ( $val * $base ) / 1000 ) px
+	else
+		( $val / 1000 ) em
+
 unstyled-list()
 	list-style					none
 	margin						0
 	padding						0
+
+//
+// UTILITIES
+// ================
+//
+
+$is-ie ?=						false
+$is-ie--version ?=				0
+
+ie($version, $strict = false)
+	if ($is-ie == true)
+		if($strict == true)
+			if ($is-ie--version == $version)
+				{block}
+		else
+			if ($is-ie--version <= $version)
+				{block}
+
+opacity($n, $args...)
+	opacity: $n $args
+	if $is-ie
+		$val = round($n * 100)
+		+ie(8, true)
+			-ms-filter			"'alpha(opacity=%s)'" % $val $args
+		+ie(7)
+			filter				"alpha(opacity=%s)" % $val $args
+
+percentage($decimal)
+	( $decimal * 100 ) %
+
+ratio($numerator, $denominator)
+	( $numerator / $denominator )
+
+ratio-percentage($numerator, $denominator)
+	( $numerator / $denominator  * 100 ) %
+	
+triangle($point = "up", $size = 1em, $color = #777)
+
+	if $size is a "unit" && $color is a "color"
+
+		if $point == "up"
+			triangle-borders({top: "", right: transparent, bottom: solid, left: transparent}, $size, $color)
+		else if $point == "right"
+			triangle-borders({top: transparent, right: "", bottom: transparent, left: solid}, $size, $color)
+		else if $point == "down"
+			triangle-borders({top: solid, right: transparent, bottom: "", left: transparent}, $size, $color)
+		else if $point == "left"
+			triangle-borders({top: transparent, right: solid, bottom: transparent, left: ""}, $size, $color)
+		else if $point == "up-left"
+			$size = ($size / 2)
+			triangle-borders({top: solid, right: transparent, bottom: transparent, left: solid}, $size, $color)
+		else if $point == "up-right"
+			$size = ($size / 2)
+			triangle-borders({top: solid, right: solid, bottom: transparent, left: transparent}, $size, $color)
+		else if $point == "down-right"
+			$size = ($size / 2)
+			triangle-borders({top: transparent, right: solid, bottom: solid, left: transparent}, $size, $color)
+		else if $point == "down-left"
+			$size = ($size / 2)
+			triangle-borders({top: transparent, right: transparent, bottom: solid, left: solid}, $size, $color)
+
+triangle-borders($sides, $size, $color)
+	height						0
+	width						0
+
+	for $side, $style in $sides
+		if $style == solid
+			border-{$side}		$size solid $color
+		else if $style == transparent
+			border-{$side}		$size solid transparent
