--- a/src/stylus/base/variables.styl
+++ b/src/stylus/base/variables.styl
@@ -28,6 +28,7 @@ $border-radius =		0.25em
 
 // TYPOGRAPHY
 
+$base-font-size =		16px
 $body-font =			Helvetica-Neue, sans-serif
 $headings-font =		$body-font
 $monospace-font =		Menlo, Consolas
