--- a/src/stylus/base/mixins.styl
+++ b/src/stylus/base/mixins.styl
@@ -66,7 +66,7 @@ bp($bp, $min-max = "min-width")
 
 	$em = $bp / $base-font-size
 
-	@media ({$min-max}: unit($em, em))
+	@media ({$min-max}: unit($em, "em"))
 		{block}
 
 clear()
