--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -12,12 +12,11 @@ head
 
 	block meta
 
+	// build:css styles/main.min.cs
 	link(rel="stylesheet", href="/styles/main.css")
+	// endbuild
 
 	block styles
-
-	//if lt IE 9
-		script(src="http://html5shiv.googlecode.com/svn/trunk/html5.js")
 
 	link(rel="apple-touch-icon", sizes="57x57", href="/images/apple-touch-icon-57x57.png")
 	link(rel="apple-touch-icon", sizes="114x114", href="/images/apple-touch-icon-114x114.png")
