--- a/src/stylus/objects/icons.styl
+++ b/src/stylus/objects/icons.styl
@@ -1,4 +1,10 @@
-.icon
+// @name Icon
+// @description Standard icon
+// @markup
+// <svg class="o-icon" viewBox="0 0 32 32">
+// 	<use xlink:href="#icon--namespace"></use>
+// </svg>
+.o-icon
 	background					none
 	display						inline-block
 	fill						currentColor
