--- a/src/jade/includes/footer.jade
+++ b/src/jade/includes/footer.jade
@@ -1,17 +1,17 @@
-script.
-	//- function loadCSS(e,t,n){"use strict";var i=window.document.createElement("link");var o=t||window.document.getElementsByTagName("script")[0];i.rel="stylesheet";i.href=e;i.media="only x";o.parentNode.insertBefore(i,o);setTimeout(function(){i.media=n||"all"})}
-	//- loadCSS("styles/main.css");
+//- script.
 
-	//- var _gaq = _gaq || [];
-	//- _gaq.push(["_setAccount", "UA-XXXXXXXX-X"]);
-	//- _gaq.push(["_trackPageview"]);
+//- 	var _gaq = _gaq || [];
+//- 	_gaq.push(["_setAccount", "UA-XXXXXXXX-X"]);
+//- 	_gaq.push(["_trackPageview"]);
 
-	//- (function() {
-	//- 	var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true;
-	//- 	ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
-	//- 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	//- })();
+//- 	(function() {
+//- 		var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true;
+//- 		ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
+//- 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+//- 	})();
 
+// build:js scripts/main.min.js
 script(src="/scripts/main.js", async)
+// endbuild
 
 block scripts
