--- a/src/stylus/base/typography.styl
+++ b/src/stylus/base/typography.styl
@@ -1,24 +1,24 @@
-$min-width =			400
-$max-width =			800
-$min-width-px =			unit($min-width, px)
-$max-width-px =			unit($max-width, px)
-$min-font =				16
-$max-font =				24
-$min-font-px =			unit($min-font, px)
-$max-font-px =			unit($max-font, px)
+$min-width		=			400
+$max-width		=			800
+$min-width-px	=			unit($min-width, px)
+$max-width-px	=			unit($max-width, px)
+$min-font		=			14
+$max-font		=			22
+$min-font-px	=			unit($min-font, px)
+$max-font-px	=			unit($max-font, px)
 
 :root
-	font-size   		unit($min-font, "px")
+	font-size   			unit($min-font, "px")
 
 @media (min-width: $min-width-px) and (max-width: $max-width-px)
 
 	:root
-		font-size		"calc(%s + (%s - %s) * ((100vw - %s) / (%s - %s)))" % (($min-font-px) ($max-font) ($min-font) ($min-width-px) ($max-width) ($min-width))
+		font-size			"calc(%s + (%s - %s) * ((100vw - %s) / (%s - %s)))" % (($min-font-px) ($max-font) ($min-font) ($min-width-px) ($max-width) ($min-width))
 
 @media (min-width: $max-width-px)
 
 	:root
-		font-size		unit($max-font, "px")
+		font-size			unit($max-font, "px")
 
 // Base styles
 
@@ -50,6 +50,7 @@ h5,
 h6
 	color					$headings-colour
 	font-family				$headings-font
+	margin-top				0
 
 // Helper classes
 
