update standard meta tags

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -6,9 +6,38 @@ head
 	meta(charset="utf-8")
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	meta(name="description", content="#{description}")
-	meta(name="keywords", content="#{keywords}")
-	meta(name="author", content="Darryl Snow")
-	meta(name="viewport", content="width=device-width,initial-scale=1")
+	meta(name="author", content="Your Name")
+	meta(name="viewport", content="width=device-width, initial-scale=1.0")
+	meta(name="robots", content="index,follow")
+	meta(name="twitter:card", content="summary")
+	meta(name="twitter:site", content="@you")
+	meta(name="twitter:site:id", content="00000000")
+	meta(name="twitter:creator", content="@you")
+	meta(name="twitter:creator:id", content="00000000")
+	meta(name="twitter:url", property="og:url", content="#{url}")
+	meta(name="twitter:title", property="og:title", content="Page Title")
+	meta(name="twitter:description", property="og:description", content="#{description}")
+	meta(name="twitter:image", property="og:image", content="#{url}/images/icon.png")
+
+	link(rel="canonical", href="#{url}")
+	//- link(rel="alternate amphtml", type="text/html", href="#{url}/amp")
+	link(rel="me", href="mailto:your@email.com")
+	link(rel="me", href="sms:+000000000000")
+	link(rel="webmention", href="#{url}/webmention")
+	link(rel="authorization_endpoint", href="https://indieauth.com/auth")
+	link(rel="authorization_endpoint", href="https://indiecert.net/auth")
+	link(rel="token_endpoint", href="https://tokens.indieauth.com/token")
+	link(rel="token_endpoint", href="https://indiecert.net/token")
+	link(rel="micropub", href="#{url}/micropub")
+	link(rel="search", type="application/opensearchdescription+xml", href="#{url}/opensearch.xml", title="Adactio")
+	link(rel="openid.server", href="https://indieauth.com/openid")
+	link(rel="openid.delegate", href="#{url}/")
+	//- link(rel="alternate", type="application/rss+xml", title="Journal RSS", href="/rss")
+	link(rel="author", href="/about/me", title="About Your Name")
+	link(rel="shortcut icon", type="image/ico", href="/images/favicon.ico")
+	link(rel="shortcut icon", type="image/png", href="/images/icon.png")
+	link(rel="apple-touch-icon", type="image/png", href="/images/icon.png")
+	link(rel="manifest", href="/manifest.json")
 
 	block meta
 
@@ -17,22 +46,3 @@ head
 	// endbuild
 
 	block styles
-
-	link(rel="apple-touch-icon", sizes="57x57", href="/images/apple-touch-icon-57x57.png")
-	link(rel="apple-touch-icon", sizes="114x114", href="/images/apple-touch-icon-114x114.png")
-	link(rel="apple-touch-icon", sizes="72x72", href="/images/apple-touch-icon-72x72.png")
-	link(rel="apple-touch-icon", sizes="144x144", href="/images/apple-touch-icon-144x144.png")
-	link(rel="apple-touch-icon", sizes="60x60", href="/images/apple-touch-icon-60x60.png")
-	link(rel="apple-touch-icon", sizes="120x120", href="/images/apple-touch-icon-120x120.png")
-	link(rel="apple-touch-icon", sizes="76x76", href="/images/apple-touch-icon-76x76.png")
-	link(rel="apple-touch-icon", sizes="152x152", href="/images/apple-touch-icon-152x152.png")
-	link(rel="apple-touch-icon", sizes="180x180", href="/images/apple-touch-icon-180x180.png")
-	link(rel="icon", type="image/png", href="/images/favicon-16x16.png", sizes="16x16")
-	link(rel="icon", type="image/png", href="/images/favicon-32x32.png", sizes="32x32")
-	link(rel="icon", type="image/png", href="/images/favicon-96x96.png", sizes="96x96")
-	link(rel="icon", type="image/png", href="/images/favicon-160x160.png", sizes="160x160")
-	link(rel="icon", type="image/png", href="/images/favicon-192x192.png", sizes="192x192")
-	meta(name="msapplication-TileColor", content="#ffffff")
-	meta(name="msapplication-TileImage", content="images/mstile-144x144.png")
-	meta(name="msapplication-config", content="/images/browserconfig.xml")
-	link(rel="shortcut icon", href="/images/favicon.ico")
