add performance budget, coding guidelines, improve style framework, add jad SVG icon mixin

--- a/src/stylus/base/typography.styl
+++ b/src/stylus/base/typography.styl
@@ -35,6 +35,7 @@ body
 
 a
 	color					$blue
+	white-space				nowrap
 
 	+ActiveFocusHover()
 		color				darken($blue, 20%)
@@ -51,24 +52,3 @@ h6
 	color					$headings-colour
 	font-family				$headings-font
 	margin-top				0
-
-// Helper classes
-
-.caps
-	text-transform			uppercase
-
-.centred
-	text-align				center
-
-.left-aligned
-	text-align				left
-
-.right-aligned
-	text-align				right
-
-.small
-	font-size				0.85em
-
-.subheading
-	font-size				0.5em
-	margin					0.3em 0
