remove unused CSS from production build

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -41,7 +41,7 @@ head
 
 	block meta
 
-	// build:css styles/main.min.cs
+	// build:css styles/main.min.css
 	link(rel="stylesheet", href="/styles/main.css")
 	// endbuild
 
