--- a/src/jade/includes/footer.jade
+++ b/src/jade/includes/footer.jade
@@ -10,7 +10,7 @@
 //- 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 //- 	})();
 
-// build:js scripts/main.min.js
+// build:js /scripts/main.min.js
 script(src="/scripts/main.js", async)
 // endbuild
 
