--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -15,7 +15,7 @@ head
 	meta(name="twitter:creator", content="@you")
 	meta(name="twitter:creator:id", content="00000000")
 	meta(name="twitter:url", property="og:url", content="#{url}")
-	meta(name="twitter:title", property="og:title", content="Page Title")
+	meta(name="twitter:title", property="og:title", content="#{title}")
 	meta(name="twitter:description", property="og:description", content="#{description}")
 	meta(name="twitter:image", property="og:image", content="#{url}/images/icon.png")
 
@@ -41,7 +41,7 @@ head
 
 	block meta
 
-	// build:css styles/main.min.css
+	// build:css /styles/main.min.css
 	link(rel="stylesheet", href="/styles/main.css")
 	// endbuild
 
