update meta data

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -29,7 +29,7 @@ head
 	link(rel="token_endpoint", href="https://tokens.indieauth.com/token")
 	link(rel="token_endpoint", href="https://indiecert.net/token")
 	link(rel="micropub", href="#{url}/micropub")
-	link(rel="search", type="application/opensearchdescription+xml", href="#{url}/opensearch.xml", title="Adactio")
+	link(rel="search", type="application/opensearchdescription+xml", href="#{url}/opensearch.xml", title="#{title}")
 	link(rel="openid.server", href="https://indieauth.com/openid")
 	link(rel="openid.delegate", href="#{url}/")
 	//- link(rel="alternate", type="application/rss+xml", title="Journal RSS", href="/rss")
