--- a/src/jade/includes/footer.jade
+++ b/src/jade/includes/footer.jade
@@ -11,7 +11,7 @@
 //- 	})();
 
 // build:js /scripts/main.min.js
-script(src="/scripts/main.js", async)
+//- script(src="/scripts/main.js", async)
 // endbuild
 
 block scripts
