--- a/src/jade/templates/master.jade
+++ b/src/jade/templates/master.jade
@@ -5,7 +5,9 @@ html(lang="en")
 	include ../includes/mixins
 
 	body
+	
+		include ../../images/symbol-defs.svg
 
 		block content
 
-		include ../includes/footer
+		//- include ../includes/footer
