--- a/src/stylus/variables/typography.styl
+++ b/src/stylus/variables/typography.styl
@@ -1,4 +1,8 @@
+@font-face
+	font-family "Viking"
+	src 		url("fonts/VIKING-N.woff")
+
 $base-font-size =			14px
-$body-font =				Helvetica-Neue, sans-serif
+$body-font =				"Viking", Helvetica-Neue, sans-serif
 $headings-font =			$body-font
 $monospace-font =			Menlo, Consolas
