--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -6,34 +6,23 @@ head
 	meta(charset="utf-8")
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	meta(name="description", content="#{description}")
-	meta(name="author", content="Your Name")
+	meta(name="author", content="Darry Snow")
 	meta(name="viewport", content="width=device-width, initial-scale=1.0")
 	meta(name="robots", content="index,follow")
 	meta(name="twitter:card", content="summary")
-	meta(name="twitter:site", content="@you")
-	meta(name="twitter:site:id", content="00000000")
-	meta(name="twitter:creator", content="@you")
-	meta(name="twitter:creator:id", content="00000000")
+	meta(name="twitter:site", content="@ValhallaKM")
+	meta(name="twitter:site:id", content="4917735106")
+	meta(name="twitter:creator", content="@ValhallaKM")
+	meta(name="twitter:creator:id", content="4917735106")
 	meta(name="twitter:url", property="og:url", content="#{url}")
-	meta(name="twitter:title", property="og:title", content="#{title}")
+	meta(name="twitter:title", property="og:title", content="Valhalla Craft Brewery")
 	meta(name="twitter:description", property="og:description", content="#{description}")
 	meta(name="twitter:image", property="og:image", content="#{url}/images/icon.png")
 
 	link(rel="canonical", href="#{url}")
-	//- link(rel="alternate amphtml", type="text/html", href="#{url}/amp")
-	link(rel="me", href="mailto:your@email.com")
-	link(rel="me", href="sms:+000000000000")
+	link(rel="me", href="mailto:ray.denning@gmail.com")
+	link(rel="me", href="sms:+8618787444489")
 	link(rel="webmention", href="#{url}/webmention")
-	link(rel="authorization_endpoint", href="https://indieauth.com/auth")
-	link(rel="authorization_endpoint", href="https://indiecert.net/auth")
-	link(rel="token_endpoint", href="https://tokens.indieauth.com/token")
-	link(rel="token_endpoint", href="https://indiecert.net/token")
-	link(rel="micropub", href="#{url}/micropub")
-	link(rel="search", type="application/opensearchdescription+xml", href="#{url}/opensearch.xml", title="#{title}")
-	link(rel="openid.server", href="https://indieauth.com/openid")
-	link(rel="openid.delegate", href="#{url}/")
-	//- link(rel="alternate", type="application/rss+xml", title="Journal RSS", href="/rss")
-	link(rel="author", href="/about/me", title="About Your Name")
 	link(rel="shortcut icon", type="image/ico", href="/images/favicon.ico")
 	link(rel="shortcut icon", type="image/png", href="/images/icon.png")
 	link(rel="apple-touch-icon", type="image/png", href="/images/icon.png")
