--- a/src/stylus/base/typography.styl
+++ b/src/stylus/base/typography.styl
@@ -52,3 +52,7 @@ h6
 	color					$headings-colour
 	font-family				$headings-font
 	margin-top				0
+
+.subheading
+	font-size				0.5em
+	margin					0.5em 0 1em 0
