--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-/* project-template : 0.0.0 : Tue Feb 16 2016 17:04:38 GMT+0800 (CST) */@font-face {
+/* valhalla-brewery : 0.0.0 : Tue Feb 16 2016 17:27:40 GMT+0800 (CST) */@font-face {
   font-family: "Viking";
   src: url("fonts/VIKING-N.woff");
 }
