fix paths for github pages

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -23,15 +23,15 @@ head
 	link(rel="me", href="mailto:ray.denning@gmail.com")
 	link(rel="me", href="sms:+8618787444489")
 	link(rel="webmention", href="#{url}/webmention")
-	link(rel="shortcut icon", type="image/ico", href="/images/favicon.ico")
-	link(rel="shortcut icon", type="image/png", href="/images/icon.png")
-	link(rel="apple-touch-icon", type="image/png", href="/images/icon.png")
-	link(rel="manifest", href="/manifest.json")
+	link(rel="shortcut icon", type="image/ico", href="images/favicon.ico")
+	link(rel="shortcut icon", type="image/png", href="images/icon.png")
+	link(rel="apple-touch-icon", type="image/png", href="images/icon.png")
+	link(rel="manifest", href="manifest.json")
 
 	block meta
 
 	// build:css /styles/main.min.css
-	link(rel="stylesheet", href="/styles/main.css")
+	link(rel="stylesheet", href="styles/main.css")
 	// endbuild
 
 	block styles
