--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,7 +11,7 @@ block content
 
 		.c-hero__content
 
-			img.c-hero__logo(src="/images/valhalla-logo.svg", alt="哇哈啦标志 Valhalla logo")
+			img.c-hero__logo(src="images/valhalla-logo.svg", alt="哇哈啦标志 Valhalla logo")
 
 			h1.c-hero__heading Vallhalla 哇哈啦
 				.subheading Craft Brewery 精酿啤酒厂
@@ -22,7 +22,7 @@ block content
 		.c-footer__map
 			
 			a(href="http://j.map.baidu.com/nBRD8", title="打开百度地图 Click to open Baidu Map")
-				img(src="/images/map.png", alt="哇哈啦地图 Map to Valhalla")
+				img(src="images/map.png", alt="哇哈啦地图 Map to Valhalla")
 			
 		.c-footer__contact-details
 		
@@ -57,7 +57,7 @@ block content
 					
 				li.c-footer__social-media__item.c-footer__social-media__item--weixin
 						
-					img(src="/images/qr-code.png", alt="Follow us on Wechat")
+					img(src="images/qr-code.png", alt="Follow us on Wechat")
 					
 			p(role="contentinfo")
 			
