--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -57,7 +57,7 @@ block content
 					
 				li.c-footer__social-media__item.c-footer__social-media__item--weixin
 						
-					img(src="images/qr-code.png", alt="Follow us on Wechat")
+					img(src="images/qr-code.jpg", alt="Follow us on Wechat")
 					
 			p(role="contentinfo")
 			
